Refactored Storybook UI (#2020)
* refactored Storybook UI

* refactored Storybook UI

* removed extra cards from the doc, added card for ui components

--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -214,7 +214,7 @@ li.coming-soon a::after {
 }
 
 .table-of-contents__link {
-  text-decoration: underline;
+  text-decoration: none;
 }
 
 a.table-of-contents__link:hover{
