User guide & vale setup (#2260)
* refactored Storybook UI

* refactored Storybook UI

* removed extra cards from the doc, added card for ui components

* added hover behavior to doc page & made it look selected

* separate storybook docs and tests

* separating storybook tests and docs

* fixed spelling errors in docs

* Final round of edits for frontend, added backend folder architecture

* Created CODE_OF_CONDUCT.md

* Add code of conduct to contributing.md

* doc changes

* fixed broken links

* doc addition and changes

* introduce user guide & graphql api

* set up vale, added to docs

* vale config file

* revised backend best practices

* connecting zapier and twenty

* added warning for zapier

--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -163,21 +163,25 @@ li.coming-soon a::after {
   color:inherit
 } 
 
+.menu__list-item--level1 > .menu__link--active {
+  color: inherit;
+}
+
+
 .menu__list-item--level1 > .menu__link--active > .icon-and-text {
   color: black;
 }
 
-/* Change text color to white for dark mode */
-@media (prefers-color-scheme: dark) {
-  .menu__list-item--level1 > .menu__link--active > .icon-and-text {
-    color: white;
-  }
+
+[data-theme='dark'] .menu__list-item--level1 > .menu__link--active > .icon-and-text {
+  color: white;
 }
 
-/* Reset to the browser's default text color for other cases (light mode) */
-.menu__list-item--level1 > .menu__link--active > .icon-and-text {
+
+[data-theme='light'] .menu__list-item--level1 > .menu__link--active > .icon-and-text {
   color: initial;
 }
+
 
  
 
