--- a/packages/twenty-docs/src/css/custom.css
+++ b/packages/twenty-docs/src/css/custom.css
@@ -250,7 +250,7 @@ li.coming-soon a::after {
 }
 
 .fullHeightPlayground {
-  height: calc(100vh - var(--ifm-navbar-height));
+  height: calc(100vh - var(--ifm-navbar-height) - 45px);
 }
 
 .display-none {
