WIP: New User Guide (#3984)
* initial commit

* Theme setup on twenty-website package

* Left bar, Content done

* Content added, useDeviceType hook added

* useDeviceType file renamed

* Responsiveness introduced

* Mobile responsiveness fix

* TOC layout

* PR fixes

* PR changes 2

* PR changes #3

--- a/packages/twenty-website/src/app/layout.css
+++ b/packages/twenty-website/src/app/layout.css
@@ -30,8 +30,24 @@ a {
 }
 
 nav.toc {
-  width: 200px;
+  width: 20%;
   position: fixed;
-  top: 100px;
+  top: 125px;
   right: 0;
+}
+
+nav.toc ol{
+    list-style-type: circle;
+}
+
+nav.toc li{
+    height: 32px;
+}
+
+nav.toc a{
+    color: #141414;
+    font-family: var(--font-inter);
+    font-size: 15px;
+    font-weight: 500;
+    text-decoration: none;
 }
