MQ Facepaint introduced (#4169)
* MQ Facepaint introduced

* Remove useDeviceType

---------

Co-authored-by: Félix Malfait <felix.malfait@gmail.com>

--- a/packages/twenty-website/src/app/layout.css
+++ b/packages/twenty-website/src/app/layout.css
@@ -30,6 +30,12 @@ a {
     }
 }
 
+@media (max-width: 1199px) {
+nav {
+        display: none;
+    }
+}
+
 nav.toc {
   width: 20%;
   position: fixed;
