--- a/packages/twenty-docs/src/theme/DocCard/styles.module.css
+++ b/packages/twenty-docs/src/theme/DocCard/styles.module.css
@@ -3,10 +3,11 @@
   --ifm-link-hover-color: var(--ifm-color-emphasis-700);
   --ifm-link-hover-decoration: none;
 
-  box-shadow: 0 1.5px 3px 0 rgb(0 0 0 / 15%);
   border: 1px solid var(--ifm-color-emphasis-200);
   transition: all var(--ifm-transition-fast) ease;
   transition-property: border, box-shadow;
+
+
 }
 
 .cardContainer:hover {
@@ -15,7 +16,8 @@
 }
 
 .cardContainer *:last-child {
-  margin-bottom: 0;
+  margin-bottom: 0px;
+
 }
 
 .cardTitle {
