Modify UI website and fix navbar issue on small devices (#4961)
-Fixed scroll issue on navbar:


https://github.com/twentyhq/twenty/assets/102751374/19f609f0-637d-483f-a695-f4a276155f2c

-Modified various UI elements, including design and layout adjustments
Example: 
**Before:**

<img width="279" alt="Screenshot 2024-04-14 at 18 45 04"
src="https://github.com/twentyhq/twenty/assets/102751374/c0f58aa6-440b-475a-bc85-69fef564f693">

**After:** 
<img width="312" alt="Screenshot 2024-04-14 at 18 45 17"
src="https://github.com/twentyhq/twenty/assets/102751374/2da4c2e8-e482-4d36-b6dc-02a51dde1950">

---------

Co-authored-by: Ady Beraud <a.beraud96@gmail.com>

--- a/packages/twenty-website/src/app/layout.css
+++ b/packages/twenty-website/src/app/layout.css
@@ -13,6 +13,17 @@ body {
     font-family: var(--font-gabarito);
 }
 
+@media (max-width: 810px) {
+    body {
+        -ms-overflow-style: none;
+        scrollbar-width: none;
+    }
+
+    body::-webkit-scrollbar {
+        display: none;
+    }
+}
+
 .container {
     display: flex;
     flex-direction: column;
@@ -58,3 +69,9 @@ nav.toc a{
     font-weight: 500;
     text-decoration: none;
 }
+
+code {
+    background: var(--Transparency-Lighter, #1414140a);
+    padding: 4px;
+    border-radius: 4px;
+  }
