--- a/packages/twenty-front/src/index.css
+++ b/packages/twenty-front/src/index.css
@@ -9,6 +9,10 @@ html {
   font-size: 13px;
 }
 
+button {
+  font-size: 13px;
+}
+
 /* https://stackoverflow.com/questions/44543157/how-to-hide-the-google-invisible-recaptcha-badge */
 .grecaptcha-badge {
   visibility: hidden !important;
